force-app/main/default/objects/TriggerService__mdt/TriggerService__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Service</label>
    <pluralLabel>Trigger Services</pluralLabel>
</CustomObject>