force-app/main/default/objects/TriggerService__mdt/fields/TriggerEvent__c.field-meta.xml
<CustomField>
    <fullName>TriggerEvent__c</fullName>
    <label>Trigger Event</label>
    <length>80</length>
    <type>Text</type>
</CustomField>