force-app/main/default/objects/TriggerService__mdt/fields/TriggerHandler__c.field-meta.xml
<CustomField>
    <fullName>TriggerHandler__c</fullName>
    <label>Trigger Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>